theme: fix invisible user avatar for classic
https://bugzilla.gnome.org/show_bug.cgi?id=745693

--- a/_common.scss
+++ b/_common.scss
@@ -1572,10 +1572,12 @@ $legacy_icon_size: 24px;
 
 .framed-user-icon {
   background-size: contain;
-  border: 2px solid $borders_color;
+  border: 2px solid $osd_fg_color;
+  color: $osd_fg_color;
   border-radius: 3px;
   &:hover {
-    border-color: lighten($borders_color,30%);
+    border-color: lighten($osd_fg_color,30%);
+    color: lighten($osd_fg_color,30%);
   }
 }
 
